[package]
name = "polygon-arb-detector-kuldeep"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6" # A good library for error handling
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] } # Add this
chrono = "0.4" 
dotenvy = "0.15"